--- a/README
+++ b/README
@@ -3,7 +3,9 @@
 * (c) Angelo Geels 2011
 ********************************
 
-Open-source Stepmania Online server written in Mono C# and Python.
-Still in active development. Don't expect any source code in the next few weeks.
+Open-source Stepmania Online server written in (Mono) C# and Python.
+Still in active development.
+
+A release will be coming VERY soon!
 
 Follow my progress: http://twitter.com/ansjh
