--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 ********************************
 * OpenSMO
-* (c) Angelo Geels 2011
+* (c) Angelo Geels 2011-2017
 ********************************
 
 Open-source Stepmania Online server written in Mono C#.
 
-Follow my progress: http://twitter.com/ansjh
+Follow me on Twitter: http://twitter.com/codecatt
